main
====
Removal of Python 3.8 support [Breaking change]
httpx `Client` made per-instance for sync clients (fixes corner cases with certain SSL setups)
Astra DB admin classes:
    - reworked polling logic: optimized and enriched with pollability pre-checks;
    - improvements in DevOps API response error handling.
Introduced `astrapy-repl` command for a ready-to-use interactive REPL
Event Observer API, to listen to events:
    - this complements the standard logging mechanism;
    - events are: warnings, payloads/responses, ...
    - useful for customized logging, observability and instrumentation;
    - see `astrapy.event_observers` module and docstring of classes therein for more.
maintenance: measure test coverage for PRs and merges to main; calculate delta for PRs
maintenance: bump urllib3 to >= 2.6.3 to avoid CVE-2026-21441
maintenance: add flag `TEST_EXTENDED_VECTORIZE` for test runnability in all cases
maintenance: introduce `LEGACY_INSERTMANY_BEHAVIOUR_PRE2193` flag to control related tests
maintenance: enabled text-index integration tests on Astra
maintenance: introduced the publish-and-release workflow machinery
maintenance: split development/maintenance from user README
maintenance. Improvement in testing machinery:
    - Simplified keyspace management in testing.
    - Made keyspace names fully optional in all cases (typically one can forget about them).
    - Adapted/simplified README about testing.
    - KMS-vectorize testing is now optional in the Astra base test suite.


v 2.1.0
=======
Same as 2.1.0rc1


v 2.1.0rc1
==========
AlterTableOperation subclasses:
    - Added positional passing of parameter constructor
    - Accept single-string parameter for the drop-column and drop-vectorize cases
    - Add and AddVectorize constructors accept a 'columns' dict with dict values (now individually coerced)
Switch default encode_maps_as_lists_in_tables to "DATAAPIMAPS" (no observable changes w.r.t. previous releases)